visualobjects.js:  2 patchs to avoid a lot of javascript !! Color.cs and Coordinate.cs: use invariant culture to avoid error due to culture formating ie french decimal separator :-) Index.html: Add <!DOCTYPE html> to avoid warning from the developer's console VisualObjects.WebService.csproj: change CopyToOutpuDirectory Always by security. Works well ! http://i.imgur.com/eun8UND.png

--- a/Actors/VisualObjects/VisualObjects.WebService/VisualObjects.WebService.csproj
+++ b/Actors/VisualObjects/VisualObjects.WebService/VisualObjects.WebService.csproj
@@ -113,13 +113,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="wwwroot\Scripts\visualobjects.js">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="wwwroot\Scripts\gl-matrix-min.js">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="wwwroot\Scripts\webgl-utils.js">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="wwwroot\Index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
