Updating to .NET 4.5.1, adding readonly attribute to visual object actor's GetStateAsJsonAsync method to avoid unnecessary state replication.

--- a/Actors/VisualObjects/VisualObjects.ActorService/VisualObjects.ActorService.csproj
+++ b/Actors/VisualObjects/VisualObjects.ActorService/VisualObjects.ActorService.csproj
@@ -9,11 +9,12 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VisualObjects.ActorService</RootNamespace>
     <AssemblyName>VisualObjects.ActorService</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup>
     <RunFabActUtil>true</RunFabActUtil>
@@ -80,7 +81,9 @@
   <ItemGroup>
     <None Include="PackageRoot\ServiceManifest.xml" />
     <None Include="PackageRoot\Config\Settings.xml" />
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
