--- a/Actors/VisualObjects/VisualObjects.WebService/packages.config
+++ b/Actors/VisualObjects/VisualObjects.WebService/packages.config
@@ -11,4 +11,5 @@
   <package id="Microsoft.ServiceFabric.Services" version="1.5.175-preview" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="paperjs" version="0.9.22" targetFramework="net451" />
 </packages>
