--- a/Services/WordCount/WordCount.WebService/WordCount.WebService.csproj
+++ b/Services/WordCount/WordCount.WebService/WordCount.WebService.csproj
@@ -108,6 +108,9 @@
   <ItemGroup>
     <Compile Include="App_Start\FormatterConfig.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
+    <Compile Include="HttpCommunicationClient.cs" />
+    <Compile Include="HttpCommunicationClientFactory.cs" />
+    <Compile Include="HttpExceptionHandler.cs" />
     <Compile Include="WordCountWebService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ServiceEventSource.cs" />
