--- a/Actors/VisualObjects/VisualObjects.WebService/packages.config
+++ b/Actors/VisualObjects/VisualObjects.WebService/packages.config
@@ -5,10 +5,11 @@
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.ServiceFabric" version="4.5.175-preview" targetFramework="net451" />
-  <package id="Microsoft.ServiceFabric.Actors" version="1.5.175-preview" targetFramework="net451" />
-  <package id="Microsoft.ServiceFabric.Data" version="1.5.175-preview" targetFramework="net451" />
-  <package id="Microsoft.ServiceFabric.Services" version="1.5.175-preview" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Microsoft.ServiceFabric" version="5.0.135" targetFramework="net451" />
+  <package id="Microsoft.ServiceFabric.Actors" version="2.0.135" targetFramework="net451" />
+  <package id="Microsoft.ServiceFabric.Data" version="2.0.135" targetFramework="net451" />
+  <package id="Microsoft.ServiceFabric.Services" version="2.0.135" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="paperjs" version="0.9.22" targetFramework="net451" />
 </packages>
