--- a/Services/Chatter/ChatWeb/project.json
+++ b/Services/Chatter/ChatWeb/project.json
@@ -7,7 +7,7 @@
     "Microsoft.AspNet.Server.WebListener": "1.0.0-rc1-final",
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "Microsoft.ServiceFabric.AspNet.Hosting": "1.0.0-rc1",
-    "Microsoft.ServiceFabric.Services": "1.5.175-preview"
+    "Microsoft.ServiceFabric.Services": "2.0.135"
   },
 
     "commands": {
