Adding AutoGenerateBindingRedirects to sfproj

--- a/Services/WordCount/WordCount.Service/WordCount.Service.csproj
+++ b/Services/WordCount/WordCount.Service/WordCount.Service.csproj
@@ -134,7 +134,9 @@
   <ItemGroup>
     <None Include="PackageRoot\ServiceManifest.xml" />
     <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WordCount.Common\WordCount.Common.csproj">
