--- a/Services/WordCount/WordCount.WebService/WordCount.WebService.csproj
+++ b/Services/WordCount/WordCount.WebService/WordCount.WebService.csproj
@@ -127,7 +127,9 @@
     </Content>
     <None Include="PackageRoot\ServiceManifest.xml" />
     <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="wwwroot\Index.html">
