WebSrevice: Controller updates to just return Json, fixed UI graphics, changed to use minifies javascript.

--- a/src/GettingStartedApplication/WebService/bundleconfig.json
+++ b/src/GettingStartedApplication/WebService/bundleconfig.json
@@ -15,7 +15,7 @@
     ],
     // Optionally specify minification options
     "minify": {
-      "enabled": false,
+      "enabled": true,
       "renameLocals": true
     },
     // Optinally generate .map file
