--- a/src/GettingStartedApplication/WebService/project.fragment.lock.json
+++ b/src/GettingStartedApplication/WebService/project.fragment.lock.json
@@ -5,22 +5,25 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.5.2",
       "compile": {
-        "bin/x64/Release/ActorBackendService.Interfaces.dll": {}
+        "bin/x64/Debug/ActorBackendService.Interfaces.dll": {}
       },
       "runtime": {
-        "../packages/Microsoft.ServiceFabric.5.4.145/lib/net45/Microsoft.ServiceFabric.Internal.Strings.dll": {},
-        "../packages/Microsoft.ServiceFabric.5.4.145/lib/net45/Microsoft.ServiceFabric.Internal.dll": {},
-        "../packages/Microsoft.ServiceFabric.5.4.145/lib/net45/System.Fabric.Strings.dll": {},
-        "../packages/Microsoft.ServiceFabric.5.4.145/lib/net45/System.Fabric.dll": {},
-        "../packages/Microsoft.ServiceFabric.Actors.2.4.145/lib/net45/Microsoft.ServiceFabric.Actors.dll": {},
-        "../packages/Microsoft.ServiceFabric.Actors.2.4.145/lib/net45/ServiceFabricServiceModel.dll": {},
-        "../packages/Microsoft.ServiceFabric.Data.2.4.145/lib/net45/Microsoft.ServiceFabric.Data.Interfaces.dll": {},
-        "../packages/Microsoft.ServiceFabric.Data.2.4.145/lib/net45/Microsoft.ServiceFabric.Data.dll": {},
-        "../packages/Microsoft.ServiceFabric.Services.2.4.145/lib/net45/Microsoft.ServiceFabric.Services.dll": {},
-        "bin/x64/Release/ActorBackendService.Interfaces.dll": {}
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/Microsoft.ServiceFabric.Internal.Strings.dll": {},
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/Microsoft.ServiceFabric.Internal.dll": {},
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/System.Fabric.Management.ServiceModel.XmlSerializers.dll": {},
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/System.Fabric.Management.ServiceModel.dll": {},
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/System.Fabric.Strings.dll": {},
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/System.Fabric.dll": {},
+        "../packages/Microsoft.ServiceFabric.Actors.2.5.216/lib/net45/Microsoft.ServiceFabric.Actors.dll": {},
+        "../packages/Microsoft.ServiceFabric.Data.2.5.216/lib/net45/Microsoft.ServiceFabric.Data.Interfaces.dll": {},
+        "../packages/Microsoft.ServiceFabric.Data.2.5.216/lib/net45/Microsoft.ServiceFabric.Data.dll": {},
+        "../packages/Microsoft.ServiceFabric.FabricTransport.Internal.2.5.216/lib/net45/Microsoft.ServiceFabric.FabricTransport.dll": {},
+        "../packages/Microsoft.ServiceFabric.Services.2.5.216/lib/net45/Microsoft.ServiceFabric.Services.dll": {},
+        "../packages/Microsoft.ServiceFabric.Services.Remoting.2.5.216/lib/net45/Microsoft.ServiceFabric.Services.Remoting.dll": {},
+        "bin/x64/Debug/ActorBackendService.Interfaces.dll": {}
       },
       "contentFiles": {
-        "bin/x64/Release/ActorBackendService.Interfaces.pdb": {
+        "bin/x64/Debug/ActorBackendService.Interfaces.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
@@ -31,21 +34,24 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.5.1",
       "compile": {
-        "bin/x64/Release/StatelessBackendService.Interfaces.dll": {}
+        "bin/x64/Debug/StatelessBackendService.Interfaces.dll": {}
       },
       "runtime": {
-        "../packages/Microsoft.ServiceFabric.5.4.145/lib/net45/Microsoft.ServiceFabric.Internal.Strings.dll": {},
-        "../packages/Microsoft.ServiceFabric.5.4.145/lib/net45/Microsoft.ServiceFabric.Internal.dll": {},
-        "../packages/Microsoft.ServiceFabric.5.4.145/lib/net45/System.Fabric.Strings.dll": {},
-        "../packages/Microsoft.ServiceFabric.5.4.145/lib/net45/System.Fabric.dll": {},
-        "../packages/Microsoft.ServiceFabric.Data.2.4.145/lib/net45/Microsoft.ServiceFabric.Data.Interfaces.dll": {},
-        "../packages/Microsoft.ServiceFabric.Data.2.4.145/lib/net45/Microsoft.ServiceFabric.Data.dll": {},
-        "../packages/Microsoft.ServiceFabric.Services.2.4.145/lib/net45/Microsoft.ServiceFabric.Services.dll": {},
-        "../packages/Microsoft.ServiceFabric.Services.2.4.145/lib/net45/ServiceFabricServiceModel.dll": {},
-        "bin/x64/Release/StatelessBackendService.Interfaces.dll": {}
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/Microsoft.ServiceFabric.Internal.Strings.dll": {},
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/Microsoft.ServiceFabric.Internal.dll": {},
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/System.Fabric.Management.ServiceModel.XmlSerializers.dll": {},
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/System.Fabric.Management.ServiceModel.dll": {},
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/System.Fabric.Strings.dll": {},
+        "../packages/Microsoft.ServiceFabric.5.5.216/lib/net45/System.Fabric.dll": {},
+        "../packages/Microsoft.ServiceFabric.Data.2.5.216/lib/net45/Microsoft.ServiceFabric.Data.Interfaces.dll": {},
+        "../packages/Microsoft.ServiceFabric.Data.2.5.216/lib/net45/Microsoft.ServiceFabric.Data.dll": {},
+        "../packages/Microsoft.ServiceFabric.FabricTransport.Internal.2.5.216/lib/net45/Microsoft.ServiceFabric.FabricTransport.dll": {},
+        "../packages/Microsoft.ServiceFabric.Services.2.5.216/lib/net45/Microsoft.ServiceFabric.Services.dll": {},
+        "../packages/Microsoft.ServiceFabric.Services.Remoting.2.5.216/lib/net45/Microsoft.ServiceFabric.Services.Remoting.dll": {},
+        "bin/x64/Debug/StatelessBackendService.Interfaces.dll": {}
       },
       "contentFiles": {
-        "bin/x64/Release/StatelessBackendService.Interfaces.pdb": {
+        "bin/x64/Debug/StatelessBackendService.Interfaces.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
