Updating with sample code to match build demo video

--- a/src/GettingStartedApplication/ActorBackendService/ApplicationInsights.config
+++ b/src/GettingStartedApplication/ActorBackendService/ApplicationInsights.config
@@ -20,5 +20,13 @@
 				<Add>core.usgovcloudapi.net</Add>
 			</ExcludeComponentCorrelationHttpHeadersOnDomains>
 		</Add>
+    <Add Type="Microsoft.ApplicationInsights.EventSourceListener.EventSourceTelemetryModule, Microsoft.ApplicationInsights.EventSourceListener">
+      <Sources>
+        <Add Name="MyCompany-GettingStartedApplication-ActorBackendService" Level="Verbose" />
+        <Add Name="Microsoft-ServiceFabric-Services" Level="Verbose" />
+        <Add Name="Microsoft-ServiceFabric-Actors" Level="Verbose" />
+      
+      </Sources>
+    </Add>
 	</TelemetryModules>
 </ApplicationInsights>
