--- a/src/GettingStartedApplication/StatelessBackendService/ApplicationInsights.config
+++ b/src/GettingStartedApplication/StatelessBackendService/ApplicationInsights.config
@@ -20,5 +20,11 @@
 				<Add>core.usgovcloudapi.net</Add>
 			</ExcludeComponentCorrelationHttpHeadersOnDomains>
 		</Add>
+    <Add Type="Microsoft.ApplicationInsights.EventSourceListener.EventSourceTelemetryModule, Microsoft.ApplicationInsights.EventSourceListener">
+      <Sources>
+        <Add Name="MyCompany-GettingStartedApplication-StatelessBackendService" Level="Verbose" />
+        <Add Name="Microsoft-ServiceFabric-Services" Level="Verbose" />
+      </Sources>
+    </Add>
 	</TelemetryModules>
 </ApplicationInsights>
