--- a/src/GettingStartedApplication/StatelessBackendService/packages.config
+++ b/src/GettingStartedApplication/StatelessBackendService/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.ApplicationInsights" version="2.4.0-beta1" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.0-beta1-build12047" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights" version="2.4.0-beta3" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.2.2" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.0-beta3" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.EventSourceListener" version="2.4.0-beta1" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.ServiceFabric" version="2.3.0-build1270" targetFramework="net462" />
   <package id="Microsoft.ServiceFabric" version="5.5.216" targetFramework="net452" />
   <package id="Microsoft.ServiceFabric.Data" version="2.5.216" targetFramework="net452" />
