--- a/src/GettingStartedApplication/WebService/WebService.csproj
+++ b/src/GettingStartedApplication/WebService/WebService.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\ActivitySupport\Activities.cs" Link="Activities.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="App.config" />
     <None Update="wwwroot\**\*;Views\**\*;Areas\**\Views">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
@@ -23,7 +27,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.0" />
-    <PackageReference Include="Microsoft.ApplicationInsights.DependencyCollector" Version="2.4.0-beta1-build12047" />
+    <PackageReference Include="Microsoft.ApplicationInsights.DependencyCollector" Version="2.4.0-beta3" />
+    <PackageReference Include="Microsoft.ApplicationInsights.EventSourceListener" Version="2.4.0-beta1" />
+    <PackageReference Include="Microsoft.ApplicationInsights.PerfCounterCollector" Version="2.4.0-beta3" />
     <PackageReference Include="Microsoft.ApplicationInsights.ServiceFabric" Version="2.3.0-build1270" />
     <PackageReference Include="Microsoft.AspNet.TelemetryCorrelation" Version="1.0.0-preview1-10407-02" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.0.2" />
