--- a/src/GettingStartedApplication/StatefulBackendService/StatefulBackendService.csproj
+++ b/src/GettingStartedApplication/StatefulBackendService/StatefulBackendService.csproj
@@ -22,9 +22,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.DependencyCollector" Version="2.4.0-beta3" />
-    <PackageReference Include="Microsoft.ApplicationInsights.EventSourceListener" Version="2.4.0-beta1" />
+    <PackageReference Include="Microsoft.ApplicationInsights.EventSourceListener" Version="2.4.0-beta2" />
     <PackageReference Include="Microsoft.ApplicationInsights.PerfCounterCollector" Version="2.4.0-beta3" />
-    <PackageReference Include="Microsoft.ApplicationInsights.ServiceFabric" Version="2.3.0-build1270" />
+    <PackageReference Include="Microsoft.ApplicationInsights.ServiceFabric.Native" Version="1.0.0-beta2" />
     <PackageReference Include="Microsoft.AspNet.TelemetryCorrelation" Version="1.0.0-preview1-10407-02" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.0.3" />
