--- a/src/GettingStartedApplication/StatelessBackendService/packages.config
+++ b/src/GettingStartedApplication/StatelessBackendService/packages.config
@@ -3,8 +3,9 @@
   <package id="Microsoft.ApplicationInsights" version="2.4.0-beta3" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.4.0-beta3" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.EventSourceListener" version="2.4.0-beta1" targetFramework="net462" />
-  <package id="Microsoft.ApplicationInsights.ServiceFabric" version="2.3.0-build1270" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.EventSourceListener" version="2.4.0-beta2" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.ServiceFabric" version="1.0.0-beta2" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.ServiceFabric.Native" version="1.0.0-beta2" targetFramework="net462" />
   <package id="Microsoft.ServiceFabric" version="5.5.216" targetFramework="net452" />
   <package id="Microsoft.ServiceFabric.Data" version="2.5.216" targetFramework="net452" />
   <package id="Microsoft.ServiceFabric.FabricTransport.Internal" version="2.5.216" targetFramework="net452" />
