--- a/src/GettingStartedApplication/TenantService.Interfaces/TenantService.Interfaces.csproj
+++ b/src/GettingStartedApplication/TenantService.Interfaces/TenantService.Interfaces.csproj
@@ -79,7 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ITentantService.cs" />
+    <Compile Include="ITentantBackendService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
