--- a/src/GettingStartedApplication/TenantService/TenantService.csproj
+++ b/src/GettingStartedApplication/TenantService/TenantService.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TenantService</RootNamespace>
-    <AssemblyName>TenantService</AssemblyName>
+    <AssemblyName>TenantBackendService</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -79,7 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TenantService.cs" />
+    <Compile Include="TenantBackendService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ServiceEventSource.cs" />
   </ItemGroup>
