--- a/Services/WcfService/Calculator.Service/packages.config
+++ b/Services/WcfService/Calculator.Service/packages.config
@@ -1,7 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.ServiceFabric" version="5.3.301" targetFramework="net452" />
-  <package id="Microsoft.ServiceFabric.Data" version="2.3.301" targetFramework="net452" />
-  <package id="Microsoft.ServiceFabric.Services" version="2.3.301" targetFramework="net452" />
-  <package id="Microsoft.ServiceFabric.Services.Wcf" version="2.3.301" targetFramework="net452" />
+  <package id="Microsoft.ServiceFabric" version="9.1.1653" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.ServiceFabric.Data" version="6.1.1653" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.ServiceFabric.Data.Extensions" version="6.1.1653" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.ServiceFabric.Data.Interfaces" version="6.1.1653" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.ServiceFabric.Diagnostics.Internal" version="6.1.1653" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.ServiceFabric.FabricTransport.Internal" version="6.1.1653" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.ServiceFabric.Services" version="6.1.1653" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.ServiceFabric.Services.Remoting" version="6.1.1653" targetFramework="net452" requireReinstallation="true" />
+  <package id="Microsoft.ServiceFabric.Services.Wcf" version="6.1.1653" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net452" requireReinstallation="true" />
 </packages>
